name:                HaskellHal
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/senorGato/HaskellHal#readme
license:             BSD3
license-file:        LICENSE
author:              Claus Nomi
maintainer:          bodhiontherun@gmail.com
copyright:           2022 Claus Nomi
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable HaskellHal
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
